--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
     "react-textfit": "^1.1.1",
+    "react-use-gesture": "^9.1.3",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.32.4",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
