--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10",
     "yup": "^0.32.8"
   },
   "scripts": {
