--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@cloudfour/transition-hidden-element": "^2.0.2",
     "@hookform/resolvers": "^1.3.4",
+    "@pathofdev/react-tag-input": "^1.0.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +15,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-file-viewer": "^1.2.1",
     "react-hook-form": "^6.14.2",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
