--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
-    "react-file-viewer": "^1.2.1",
     "react-hook-form": "^6.14.2",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
