--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/resize-observer-browser": "^0.1.5"
   }
 }
