--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.32.4",
     "styled-components": "^5.2.1",
+    "swiper": "^6.7.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10",
